# web-py-ci

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-build-and-push.yml
src/: app.py
tests/: test_app.py
